--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -41,7 +41,7 @@
                     <!-- Logo -->
                     <div class="flex-shrink-0 flex items-center">
                         <a href="#" class="flex items-center space-x-3" onclick="showPage('home')">
-                            <img src="https://lh3.googleusercontent.com/rd-d/ALs6j_Grc1GN1tesS69zhntgPM5_dGpFLjcNKnHWPD_0RcHbvIKAm58BUHsbFIDQCfaVz3ZetD0rE5ZsC0gIHb1M3MWk36bmsb3uvnpNWx8Ldos0Y3gNSF6R_PGoIyTuubDcmesI4gKyeGVQakiFiUTQ9mHtke5SiQKBaI4m45v5a7voE5Wjt1bCpaq8z5FIeiOU65enPp2wLZwPZjS6H-wx2E23SKXKkVprWUAWg_n3G6YU_0rBU2krj36UXfnxp4ElTV6tmNXEleFOep5wLxYXrtphwnL7F5DbYuY1tXISHDYoBONjxTf4qcHkvpmsfZMS2rlR-Hwso2kEysHBUcDCPqlxLlQ1hS_auSIgOftVigYHXVO0JbS2rZsghcoXMpvo90-Xrv3CXfCblHbGc1jeUiXoN1erGipy9XxH9pmULtoQv0TAj2f6MdbGADUzRtQAFh_NN5nz5NyhNHUZzMrKe_NH4sNzLfCRxk0_s_40l1LE99L_ChqT0jkxqqa-ofiGltuKWikfIcaxNggSc_AvHeHbfrMC4pfSNI2DPX5cDpF4PmdSmfdhKBT7s3icNl8BczkXW5NX2rhvvlHeryK30JrHYINcAIHNQT3Cs3tiG0c_RD-82VE5LugvNPc3qIgYgyYZmyeVaDkBDm0M8hklbepPJUHq6oXaxhny7X8OaCz2awZ1nmQOLlZM2fk9ZCMuaY4Lg-wpSLE7ZnFZgGyTmWAmKUoD9CYnY5h7Iqn3rMjud2XSuB1AMs3QRB8I7O8urm1a1QHco6pJPuq7uCHL3fozgwVTqua739kKnRziAKloLEe616-WUvEtAVfWU53pMXPq91q1NoUXYnd08aXgKhjPwWyjTJ9Cp4eigiEnsUmLc6kN9Kdf6Tx-x6bsoe3dAGtyNBwy0P0ETy9radXWVdguvCX_fYugEKwww2NHO2nkf8uv7sbrwddgd0MRN3XKJVPLiERMORvmiq-RQutao-82ZvscbYP2TbAPpuqXJTNEjf5m3HOMmap51cDHo9JxYLVB_tS68oRXVzC8os43kUlW2ajavoxrvok_zlp9GdbdI_MuABDLUiSrM06BdR6R4fdll02sRyEiWyiuo2tM6atFWRazeZdvCjtRkGDRa8d7HI2Re4bsxRCjDeA6_yO_0E23m0u47DDr9oVaFUkMc6QH=w1920-h957?auditContext=thumbnail&auditContext=prefetch" alt="My Website Logo" width="150">
+                            <img src="https://scontent.cdninstagram.com/v/t51.82787-15/576412002_17845669143604945_411676566451640749_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=103&ig_cache_key=Mzc2MzAyNzI1OTMyMzI3MDIzNQ%3D%3D.3-ccb1-7&ccb=1-7&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjM0OHgxOTMuc2RyLkMzIn0%3D&_nc_ohc=dRNg_RvJ8IQQ7kNvwG53dXp&_nc_oc=Adm4pmPxw0QgAgA0piT6P2law6Qm1Q0ExgoW1b1OEYRVakyyjugsrpWkUubC1tc6RhQ6G1O29JEoFctgxA2z_tA9&_nc_ad=z-m&_nc_cid=2034&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=IsSGXeyADzn3WaJZk-0cug&oh=00_AfhKg9nHKTpwGnYnM-NxsDwsNoXF2vHR9Wwi0vFbJO6lXg&oe=6918230D" alt="My Website Logo" width="150" height="150">
                             <span class="text-2xl font-extrabold text-white tracking-tight">Filmee</span>
                         </a>
                     </div>
@@ -353,7 +353,7 @@
                 <div class="flex justify-center space-x-6 mb-4">
                     <a href="#" class="hover:text-fuchsia-400">Privacy Policy</a>
                     <a href="#" class="hover:text-fuchsia-400">Terms of Service</a>
-                    <a href="#" class="hover:text-fuchsia-400">Instagram</a>
+                    <a href="https://www.instagram.com/filmee_band/" class="hover:text-fuchsia-400">Instagram</a>
                     <a href="#" class="hover:text-fuchsia-400">X (Twitter)</a>
                 </div>
                 <p>&copy; 2025 Filmee. All rights reserved.</p>
