--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -37,12 +37,11 @@
         <!-- ===== NAVBAR ===== -->
         <nav class="sticky top-0 z-50 bg-gray-900/70 backdrop-blur-md border-b border-gray-700/50">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <div class="flex justify-between h-24">
+                <div class="flex justify-center h-24">
                     <!-- Logo -->
                     <div class="flex-shrink-0 flex items-center">
                         <a href="#" class="flex items-center space-x-3" onclick="showPage('home')">
                             <img src="https://scontent.cdninstagram.com/v/t51.82787-15/576412002_17845669143604945_411676566451640749_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=103&ig_cache_key=Mzc2MzAyNzI1OTMyMzI3MDIzNQ%3D%3D.3-ccb1-7&ccb=1-7&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjM0OHgxOTMuc2RyLkMzIn0%3D&_nc_ohc=dRNg_RvJ8IQQ7kNvwG53dXp&_nc_oc=Adm4pmPxw0QgAgA0piT6P2law6Qm1Q0ExgoW1b1OEYRVakyyjugsrpWkUubC1tc6RhQ6G1O29JEoFctgxA2z_tA9&_nc_ad=z-m&_nc_cid=2034&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=IsSGXeyADzn3WaJZk-0cug&oh=00_AfhKg9nHKTpwGnYnM-NxsDwsNoXF2vHR9Wwi0vFbJO6lXg&oe=6918230D" alt="My Website Logo" width="150" height="150">
-                            <span class="text-2xl font-extrabold text-white tracking-tight">Filmee</span>
                         </a>
                     </div>
                     <!-- Nav Links (Desktop) -->
